# invoice-intelligence-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENTS.md  Dockerfile  Makefile  README.md  dummy.txt  project.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/app/: csv_export.py  main.py  pipeline.py
backend/tests/: test_cache.py  test_csv_export.py
business_layer/: README.md  __init__.py  app.py  requirements.txt  version_info.py
business_layer/config/: __init__.py  runtime_config.py  settings.py
business_layer/db/: __init__.py  engine.py  schema.sql  tables.py
business_layer/db/migrations/: 0001_init.sql  0002_ca_linkage.sql
business_layer/errors/: __init__.py  exceptions.py  handlers.py
business_layer/models/: __init__.py  auth.py  ca.py  common.py  inbox.py  invoice.py  kpi.py  onboarding.py
business_layer/repositories/: __init__.py  _ids.py  ca_queries.py  events.py  inbox_messages.py  invoices.py  jobs.py  kpi_queries.py  otp_challenges.py  pipeline_runs.py  sessions.py  sources.py  users.py  validation_findings.py  workspaces.py
business_layer/routes/: __init__.py  auth.py  business.py  ca.py  ca_auth.py  deps.py  health.py  inbox.py  invoices.py  oauth.py  sources.py  upload.py
business_layer/security/: __init__.py  csrf.py  csrf_middleware.py  encryption.py  headers.py  otp.py  passwords.py  rate_limit.py  sessions.py
business_layer/services/: __init__.py  auth_service.py  ca_auth_service.py  ca_service.py  extraction_runner.py  findings_messages.py  gmail_source_service.py  health_service.py  inbox_service.py  invoice_service.py  kpi_service.py  onboarding_service.py  sources_service.py  storage.py  upload_service.py
business_layer/services/connectors/: gmail_connector.py
business_layer/services/oauth/: google_oauth.py
business_layer/static/business/: index.html
business_layer/static/ca/: index.html
business_layer/static/landing/: index.html  style.css
business_layer/tests/: conftest.py
business_layer/tests/integration/: test_auth_flow.py  test_ca_flow.py  test_dashboard_kpis.py  test_gmail_oauth.py  test_upload_pipeline.py
business_layer/tests/security/: test_auth_security.py  test_upload_security.py
business_layer/tests/unit/: test_errors.py  test_health.py  test_import_graph.py  test_security_primitives.py
business_layer/workers/: __init__.py  extraction_worker.py  gmail_poller.py
components/_common/: __init__.py
components/extraction/: README.md  __init__.py  base.py  factory.py  layoutlm_backend.py
components/extraction/heuristic/: __init__.py  columns.py  extractor.py  labels.py  normalizers.py  regex_patterns.py
components/extraction/schema/: input.example.json  output.schema.json
components/extraction/tests/: _fixtures.py  test_base.py  test_columns.py  test_heuristic_extractor.py  test_labels.py  test_normalizers.py  test_regex_patterns.py  test_types.py
components/ocr/: README.md  __init__.py  base.py  factory.py  paddleocr_backend.py
components/ocr/schema/: input.schema.json  output.example.json
components/ocr/tests/: test_base.py  test_invoice_input.py  test_rapidocr_backend.py  test_scaffolded_backends.py  test_types.py
components/tables/: README.md  __init__.py  base.py  factory.py  layoutlm_backend.py  pp_structure_backend.py
components/tables/schema/: input.example.json  output.example.json  output.schema.json
components/tables/spatial/: extractor.py
components/tables/tests/: _fixtures.py  test_base.py  test_scaffolded.py  test_spatial_extractor.py  test_types.py
components/validation/: README.md  __init__.py  engine.py  parsers.py
components/validation/rules/: duplicates.py  field_formats.py  iban_checksum.py  item_arithmetic.py
components/validation/tests/: _fixtures.py  test_duplicates.py  test_engine.py  test_field_formats.py  test_iban_checksum.py  test_item_arithmetic.py  test_parsers.py  test_types.py
config/: config.json
data_sources/: __init__.py  factory.py  types.py
data_sources/katanaml_invoices/: loader.py
data_sources/midd/: loader.py
data_sources/sroie/: __init__.py  loader.py
data_sources/tests/: test_base.py  test_factory.py  test_katanaml.py  test_katanaml_unit.py  test_scaffolded_datasets.py  test_types.py
docs/: README.md  business_plan.md  contributing.md  gst_invoice_platform_PRD.md  learning.md  progress.md  research.md
evaluation/reports/: 2026-04-18_G1G2.md  2026-04-18_H1.json  2026-04-19_H1.json
extraction_layer/: README.md  __init__.py  requirements.txt
extraction_layer/backend/: README.md
extraction_layer/backend/app/: cache.py  csv_export.py  main.py  pipeline.py
extraction_layer/backend/tests/: test_cache.py  test_csv_export.py
extraction_layer/components/_common/: invoice_anchors.py  text.py
extraction_layer/components/extraction/: __init__.py  base.py  factory.py  layoutlm_backend.py  types.py
extraction_layer/components/ocr/: __init__.py  base.py  doctr_backend.py  factory.py  rapidocr_backend.py  tesseract_backend.py  types.py
extraction_layer/components/tables/: __init__.py  base.py  factory.py  layoutlm_backend.py  pp_structure_backend.py  types.py
extraction_layer/components/validation/: __init__.py  engine.py  types.py
extraction_layer/data_sources/: README.md  __init__.py  base.py  factory.py  types.py
extraction_layer/data_sources/katanaml_invoices/: __init__.py  loader.py
extraction_layer/data_sources/midd/: __init__.py  loader.py
extraction_layer/data_sources/sroie/: loader.py
extraction_layer/tools/: download_dataset.py  evaluate_extraction.py  evaluate_pipeline.py  evaluate_tables.py  regen_schemas.py  spotcheck_ocr.py
scripts/: cleanup_blobs.py  seed_demo.py
secrets/: google_oauth_client_dummy.json
tests/smoke/: biz_layer_smoke.py
tools/: download_dataset.py  evaluate_extraction.py  evaluate_pipeline.py  evaluate_tables.py  regen_schemas.py  spotcheck_ocr.py
(+84 files in other folders)
