[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-intelligence-platform"
version = "0.0.1"
description = "GST Invoice Intelligence Platform — extraction_layer (PoC) + business_layer (onboarding)."
requires-python = ">=3.10"
# Layer-specific deps are documented in each layer's requirements.txt and
# composed into the root requirements.txt. This file intentionally has no
# `[project.dependencies]` block — keeps dep locality close to layer code.

[tool.hatch.build.targets.wheel]
packages = ["extraction_layer", "business_layer"]

[tool.pytest.ini_options]
testpaths = [
    "extraction_layer/components",
    "extraction_layer/data_sources",
    "extraction_layer/backend",
    "business_layer",
]
python_files = ["test_*.py"]
markers = [
    "ocr_heavy: slow tests that load real OCR models (~1-2s each); deselect with '-m \"not ocr_heavy\"'",
    "dataset_heavy: tests that download or enumerate real datasets; deselect with '-m \"not dataset_heavy\"'",
]
